--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     box-sizing: border-box;
 }
 
+h1{
+    margin-top: 20px;
+}
+
 #main-container{
     height: 50vh;
     width: 350px;
@@ -50,4 +54,16 @@ body {
     border-style: none;
     background-color: #fff8f5;
     padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.calc-btn button:hover{
+    background-color: #e29372;
+    color: white;
+    border: 2px solid #b47f6a;
+    padding: 8px 18px;
+}
+
+.calc-btn button:active{
+    background-color: #c07a5c;
 }
